--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h2 {
     font-size: 32px;
 }
 h3 {
-    
+
     font-weight: normal;
 }
 
@@ -225,10 +225,13 @@ footer {
     font-family: "Open Sans", sans-serif;
   }
 
-  @media screen and (min-width: 768px){
-  }
+.experiencia li, img:hover{
+    transform:scale(1.1);
+}
+  @media screen and (max-width : 1015px){
+  
 
-  *{
+*{
       text-align: center;
       
   }
@@ -244,6 +247,12 @@ footer {
      display: inline-block;
      padding: 0;
  }
+
+ footer{
+     display: inline-block;
+     
+ }
+
  .experiencia, .habilidades, .projeto, .resumo {
      display: inline-block;
  }
@@ -257,3 +266,5 @@ footer {
 .linha{
     display: inline-block;
 }
+
+  }
